Thu Dec 30 13:04:41 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/unittests/Makefile.am src/tds/unittests/common.h:
	* src/tds/unittests/utf8_1.c src/tds/unittests/utf8_3.c:
	* src/tds/unittests/utf8.c(added):
	- move to_utf8 function to new utf8.c file

Tue Dec 28 15:36:41 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac include/tds_sysdep_private.h:
	* m4/sprintf_i64_format.m4 src/odbc/odbc.c src/tds/convert.c:
	* src/tds/numeric.c src/tds/token.c:
	- use C99 constant for printf format string

Thu Dec 23 10:32:02 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/buffering.h src/dblib/dblib.c: dblib indicator is DBINT

Tue Dec 21 11:53:40 EST 2010	JK Lowden <jklowden@freetds.org>
	* src/apps/bsqldb.c src/apps/tsql.c src/dblib/dblib.c
	- allow Kerberos/sspi connections without username

Thu Dec 16 20:24:00 CST 2010    Craig A. Berry <craigberry@mac.com>
        * vms/getpass.c Base VMS getpass/readline on stdin, not SYS$COMMAND.

Thu Dec 16 20:18:00 CST 2010    Craig A. Berry <craigberry@mac.com>
	* src/apps/freebcp.c Fix typo in -i option.

Fri Dec 10 15:42:12 EST 2010	JK Lowden <jklowden@freetds.org>
	* include/sqlfront.h include/sybdb.h Better Win32 compatibility
	* src/apps/tsql.c report Kerberos compiled-in status

Mon Dec  6 16:23:53 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/data.c src/tds/token.c:
	- fix protocol problem with TDS7.2 and XML with schema

Fri Dec  3 17:01:00 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* m4/sprintf_i64_format.m4:
	- fix problem for cross compiled Darwin system

Fri Dec  3 16:01:20 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: small comment updates

Tue Nov 30 11:55:20 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/login.c:
	- fix problem with ct_connect if server not set (reported by Peter
	  C. Norton)

Sun Nov 28 15:15:25 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>